# data-engineering-zoomcamp

./: .gitignore
01-docker-terraform/pipeline-tutorial/: green_taxi.ipynb  ingest_data_new.py  main.py  notebook-old.ipynb  notebook.ipynb  pipeline.py
02-workflow-orchestration/: notebook-02.ipynb  pyproject.toml  yellow-02.ipynb
02-workflow-orchestration/data/: download
02-workflow-orchestration/flows/: 04b_postgres_taxi_2021.yaml
03-data-warehouse/: load_yellow_taxi.ipynb  pyproject.toml  web_to_gcs.ipynb
03-data-warehouse/extras/: Data Warehouse.pptx  big_query.sql  big_query_ml.sql  web_to_gcs-old.ipynb
04-analytics-engineering/: analytics.ipynb  pyproject.toml
04-analytics-engineering/taxi_rides_ny/: pyproject.toml
04-analytics-engineering/taxi_rides_ny/models/staging/: sources.yml  stg_fhv_tripdata.sql
cohorts/2023/week_2_workflow_orchestration/: homework.md
homework/: module_1.ipynb  module_2.ipynb  module_3.ipynb  module_4.ipynb  pyproject.toml
