[project]
name = "taxi-rides-ny"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "db-dtypes>=1.4.4",
    "dbt-duckdb>=1.10.0",
    "google-cloud-bigquery>=3.40.0",
    "google-cloud-bigquery-storage>=2.36.0",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
]
